--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ cffi==1.15.1
 click==8.1.3
 cryptography==38.0.1
 Flask==2.2.2
+Flask-Login==0.6.2
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.0.1
 greenlet==1.1.3
